# san_utils

./: .gitignore  pyproject.toml
notebooks/: nb1.ipynb  nb_utils.py
resources/outputs/: colors.xlsx  styled_dataframe.xlsx  test.xlsx  test1.xlsx  test1.xslx
san_utils/: paths.py
san_utils/excel/: __init__.py
test_scripts/: multisheets_writer.py  xl_colors.py
